--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <!-- hi -->
     <div class="card">
-        <div id="img"><img src="" alt=""></div>
+        <div id="img"><img src="" alt="Image is Loading"></div>
         <div id="status"></div>
-        <div id="message">img</div>
+        <div id="message">Content Loading</div>
     </div>
     <script src="script.js"></script>
 </body>
