--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>HTTP Dog</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- hi -->
     <div class="card">
-        <div id="img"><img src="" alt="Image is Loading"></div>
-        <div id="status"></div>
-        <div id="message">Content Loading</div>
+      <div id="img"><img src="" alt="Image is Loading" /></div>
+      <div id="status"></div>
+      <div id="message">Content Loading</div>
+      <button class="btn">Refresh</button>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
